--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta name="description" content="名城大学情報工学部非公式Webサイト">
         <meta name="viewport" content="width=device-width">
         <script src="js/toggle-menu.js"></script>
-        <link href="css/common.css" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="css/index.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">  
+        <script src = "js/toggle-menu.js"></script>
     </head>
     <body>
         <header class="header">
