--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
         <main class="main">
             <div class = "first-view">
-                <div class = "first-vier-text">
+                <div class = "first-view-text">
                     <h1>名城大学情報工学部</h1>
                     <p>想像以上を、想像しよう</p>
                 </div>
