--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>名城大学情報工学部非公式Webサイト</title>
-        <meta name="description" content="名城大学情報工学部非公式Webサイト">
+        <title>名城大学情報工学部非公式HP</title>
+        <meta name="description" content="名城大学情報工学部非公式HP">
         <meta name="viewport" content="width=device-width">
         <script src="js/toggle-menu.js"></script>
         <link href="css/index.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">  
-        <script src = "js/toggle-menu.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">    
     </head>
     <body>
         <header class="header">
@@ -31,10 +30,13 @@
             </div>
         </header>
         <main class="main">
-            <div class = "first-view">
-                <div class = "first-view-text">
+            <div class="first-view">
+                <div class="first-view-text">
                     <h1>名城大学情報工学部</h1>
-                    <p>想像以上を、想像しよう</p>
+                    <p>想像以上を，創造しよう．</p>
+                    <div class="lead">
+                        <p>先進プロジェクトコースと情報工学総合コースを完備</p>
+                    </div>
                 </div>
             </div>
         </main>
